--- a/ko.lproj/Localizable.strings
+++ b/ko.lproj/Localizable.strings
@@ -15,3 +15,6 @@ selectDate = "날짜를 선택하세요";
 today = "오늘";
 future = "미래";
 past = "과거";
+serverError = "서버에서 에러가 발생했습니다";
+confirm = "확인";
+retry = "재시도";
